Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.1rc1
  Bugs fixed
    - [ 2585 ] test_ssl failure due to Netty exception mapping
    - [ 2313 ] test_jython_initializer failure on Windows
    - [ 2399 ] test_sort failure on Java 8
    - [ 2309 ] test_classpathimporter fails on Windows.
    - [ 2318 ] test_zipimport_jy failure on Windows
    - [ 2571 ] Error handling in test_codecencodings_tw fails on Java 8
    - [ 2568 ] test_threading intermittent failure
    - [ 2559 ] test_marshal fails
    - [ 2564 ] test_socket_jy fails on Linux
    - [ 2524 ] datetime <-> time conversion incorrect in non UTC times
    - [ 2504 ] datetime.date.__tojava__ returns incorrect dates in non-UTC timezones with
               negative offset (Jython 2.7.0)
    - [ 2500 ] Loading default cacerts on client socket when specifying a default java truststore
               unnecessarily searches for more cacerts in the same dir
    - [ 2561 ] win32_ver raises exception (breaks test_platform on windows)
    - [ 2521 ] Windows installation (all) fails on Windows 10
    - [ 2557 ] ongoing pain with platform detection via os.name and sys.platform
    - [ 1996 ] Core slots array out of bounds with multiple inheritance
    - [ 2101 ] Diamond-style multiple inheritance fails when using __slots__ on the second branch
    - [ 2552 ] installing scandir via pip fails (breaks e.g. installing pathlib2 via pip)
    - [ 2534 ] os.getlogin() returns a wrong user or returns an exception
    - [ 2553 ] sys.getwindowsversion not implemented (breaks pathlib on Windows)
    - [ PR55 ] Replace deprecated use of ASCII constant with ascii()
    - [ 1777 ] Help getting SymPy working with Jython
    - [ 2475 ] Backported python 3 pathlib and pathlib2 do not work b/c of meta class issues
    - [ 2551 ] __slots__ in diamond-style causes lay-out conflict (breaks pathlib and sympy)
    - [ 2550 ] test_list_jy fails on Java 8
    - [ 2549 ] test_posix fails on Linux